[package]
name = "firmware"
version = "0.1.0"
description = "Firmware for the pulse.loop wrist pulse oximeter."
license = "MIT"
authors = ["Riccardo Persello <riccardo.persello+i@icloud.com>", "Fabio Cragnolini <fbcragnolini@gmail.com>"]
repository = "https://github.com/pulse-loop/firmware"
readme = "README.md"
keywords = ["pulse", "loop", "wrist", "oximeter", "firmware", "ble"]
categories = ["embedded", "science"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart", "native"] }
esp-idf-hal = { version = "0.38.0" }
esp_idf_logger = { version = "0.1.1" }
log = { version = "0.4.17" }
embedded-hal = { version = "1.0.0-alpha.8" }
smart-leds = { version = "0.3.0" }
ws2812-esp32-rmt-driver = { git = "https://github.com/cat-in-136/ws2812-esp32-rmt-driver" }

[build-dependencies]
embuild = "0.28"
anyhow = "1"
