[package]
name = "firmware"
version = "0.1.0"
description = "Firmware for the pulse.loop wrist pulse oximeter."
license = "MIT"
authors = ["Riccardo Persello <riccardo.persello@icloud.com>", "Fabio Cragnolini <fbcragnolini@gmail.com>"]
repository = "https://github.com/pulse-loop/firmware"
readme = "README.md"
keywords = ["pulse", "loop", "wrist", "oximeter", "firmware", "ble"]
categories = ["embedded"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "z"
lto = true

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart", "native"] }
esp-idf-hal = { version = "0.39.2" }
esp-idf-svc = { version = "0.43.3" }

embedded-svc = { version = "0.22.3" }
embedded-hal = { version = "1.0.0-alpha.9" }

bluedroid = { version = "0.3.5" }
afe4404 = { path = "../AFE4404" }
uom = { version = "0.33.0" }

# smart-leds = { version = "0.3.0" }
# ws2812-esp32-rmt-driver = { git = "https://github.com/cat-in-136/ws2812-esp32-rmt-driver" }

log = { version = "0.4.17" }
lazy_static = { version = "1.4.0" }

[build-dependencies]
embuild = "0.30.4"
anyhow = "1"
