[package]
name = "bluedroid"
version = "0.1.0"
description = "ESP32 BlueDroid Bluetooth LE stack abstraction."
license = "MIT"
authors = ["Riccardo Persello <riccardo.persello+i@icloud.com>"]
repository = "https://github.com/pulse-loop/firmware"
readme = "README.md"
keywords = ["ESP32", "bluetooth", "bluedroid", "LE", "low-energy", "ble"]
categories = ["embedded"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-sys = { version = "^0.31.0" }
lazy_static = { version = "1.4.0" }
